// Vitest Snapshot v1

exports[`Overflow > maxLabel responsive work 1`] = `
"<div class=\\"ix-overflow ix-test-overflow \\">
  <div class=\\"ix-overflow-item\\">0</div>
  <div class=\\"ix-overflow-item\\">1</div>
  <div class=\\"ix-overflow-item\\">2</div>
  <div class=\\"ix-overflow-item\\">3</div>
  <div class=\\"ix-overflow-item\\">4</div>
  <div class=\\"ix-overflow-item\\">5</div>
  <div class=\\"ix-overflow-item\\">6</div>
  <div class=\\"ix-overflow-item\\">7</div>
  <div class=\\"ix-overflow-item\\">8</div>
  <div class=\\"ix-overflow-item\\">9</div>
  <div class=\\"ix-overflow-item\\">10</div>
  <div class=\\"ix-overflow-item\\">11</div>
  <div class=\\"ix-overflow-item\\">12</div>
  <div class=\\"ix-overflow-item\\">13</div>
  <div class=\\"ix-overflow-item\\">14</div>
  <div class=\\"ix-overflow-item\\">15</div>
  <div class=\\"ix-overflow-item\\">16</div>
  <div class=\\"ix-overflow-item\\">17</div>
  <div class=\\"ix-overflow-item\\">18</div>
  <div class=\\"ix-overflow-item\\">19</div>
  <!---->
  <!---->
</div>"
`;

exports[`Overflow > maxLabel responsive work 2`] = `
"<div class=\\"ix-overflow ix-test-overflow \\">
  <div class=\\"ix-overflow-item\\">0</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">1</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">2</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">3</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">4</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">5</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">6</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">7</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">8</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">9</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">10</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">11</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">12</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">13</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">14</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">15</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">16</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">17</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">18</div>
  <div class=\\"ix-overflow-item\\" style=\\"display: none;\\">19</div>
  <div class=\\"ix-overflow-item ix-overflow-rest\\" style=\\"\\">+ 19 ...</div>
  <!---->
</div>"
`;

exports[`Overflow > render work 1`] = `
"<div class=\\"ix-overflow test-overflow \\">
  <!---->
  <!---->
</div>"
`;

exports[`Overflow > render work 2`] = `
"<div class=\\"ix-overflow test-overflow \\">
  <div class=\\"ix-overflow-item ix-overflow-rest\\" style=\\"display: none;\\">+ 0 ...</div>
  <!---->
</div>"
`;
